[gd_scene load_steps=52 format=2]

[ext_resource path="res://CharacterSelect.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Merriweather-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Character/Samurai02/02-Run/2D_SM02_Run_006.png" type="Texture" id=3]
[ext_resource path="res://Character/Samurai02/01-Idle/01-Normal/2D_SM02_Idle_006.png" type="Texture" id=4]
[ext_resource path="res://Character/Samurai02/01-Idle/01-Normal/2D_SM02_Idle_005.png" type="Texture" id=5]
[ext_resource path="res://Character/Samurai02/02-Run/2D_SM02_Run_004.png" type="Texture" id=6]
[ext_resource path="res://Character/Samurai02/02-Run/2D_SM02_Run_003.png" type="Texture" id=7]
[ext_resource path="res://Character/Samurai02/01-Idle/01-Normal/2D_SM02_Idle_001.png" type="Texture" id=8]
[ext_resource path="res://Character/Samurai02/02-Run/2D_SM02_Run_000.png" type="Texture" id=9]
[ext_resource path="res://Character/Samurai02/02-Run/2D_SM02_Run_007.png" type="Texture" id=10]
[ext_resource path="res://Character/Samurai02/01-Idle/01-Normal/2D_SM02_Idle_002.png" type="Texture" id=11]
[ext_resource path="res://Character/Samurai02/01-Idle/01-Normal/2D_SM02_Idle_000.png" type="Texture" id=12]
[ext_resource path="res://Character/Samurai02/01-Idle/01-Normal/2D_SM02_Idle_003.png" type="Texture" id=13]
[ext_resource path="res://Character/Samurai02/01-Idle/01-Normal/2D_SM02_Idle_007.png" type="Texture" id=14]
[ext_resource path="res://Character/Samurai02/01-Idle/01-Normal/2D_SM02_Idle_004.png" type="Texture" id=15]
[ext_resource path="res://Character/Samurai02/02-Run/2D_SM02_Run_005.png" type="Texture" id=16]
[ext_resource path="res://Character/Samurai02/02-Run/2D_SM02_Run_001.png" type="Texture" id=17]
[ext_resource path="res://Character/Samurai02/02-Run/2D_SM02_Run_002.png" type="Texture" id=18]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_4.png" type="Texture" id=19]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_7.png" type="Texture" id=20]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_0.png" type="Texture" id=21]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_0.png" type="Texture" id=22]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_7.png" type="Texture" id=23]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_4.png" type="Texture" id=24]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-idle-00.png" type="Texture" id=25]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-idle-01.png" type="Texture" id=26]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-run-01.png" type="Texture" id=27]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-run-04.png" type="Texture" id=28]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_6.png" type="Texture" id=29]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-run-00.png" type="Texture" id=30]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_1.png" type="Texture" id=31]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_5.png" type="Texture" id=32]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_2.png" type="Texture" id=33]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_8.png" type="Texture" id=34]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_3.png" type="Texture" id=35]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_3.png" type="Texture" id=36]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_1.png" type="Texture" id=37]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_6.png" type="Texture" id=38]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_5.png" type="Texture" id=39]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-idle-03.png" type="Texture" id=40]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_9.png" type="Texture" id=41]
[ext_resource path="res://GameSprites/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_2.png" type="Texture" id=42]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-run-02.png" type="Texture" id=43]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-run-03.png" type="Texture" id=44]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-run-05.png" type="Texture" id=45]
[ext_resource path="res://GameSprites/Adventurer/Individual Sprites/adventurer-idle-02.png" type="Texture" id=46]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 46 ), ExtResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 27 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 28 ), ExtResource( 45 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 24 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 23 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 31 ), ExtResource( 42 ), ExtResource( 36 ), ExtResource( 19 ), ExtResource( 39 ), ExtResource( 29 ), ExtResource( 20 ), ExtResource( 34 ), ExtResource( 41 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[node name="CharacterSelect" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -0.793701
margin_right = 1025.21
margin_bottom = 600.0
color = Color( 0.901961, 0.952941, 0.647059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharSelect" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.0
margin_right = 244.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Character Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="."]
margin_left = 77.0
margin_top = 84.0
margin_right = 953.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarButton" type="Button" parent="."]
margin_left = 150.0
margin_top = 384.0
margin_right = 290.0
margin_bottom = 434.0
toggle_mode = true
text = "Warrior"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdButton" type="Button" parent="."]
margin_left = 425.0
margin_top = 384.0
margin_right = 565.0
margin_bottom = 434.0
toggle_mode = true
text = "Adventurer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnButton" type="Button" parent="."]
margin_left = 700.0
margin_top = 384.0
margin_right = 840.0
margin_bottom = 434.0
toggle_mode = true
text = "Knight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectButton" type="Button" parent="."]
margin_left = 426.785
margin_top = 493.529
margin_right = 566.785
margin_bottom = 543.529
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarAnim" type="AnimatedSprite" parent="."]
position = Vector2( 204.745, 298.112 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 3 )
animation = "run"

[node name="AdAnim" type="AnimatedSprite" parent="."]
position = Vector2( 487.984, 290.714 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "run"

[node name="KnAnim" type="AnimatedSprite" parent="."]
position = Vector2( 776.811, 279.388 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 5 )
animation = "run"
[connection signal="pressed" from="WarButton" to="." method="_on_WarButton_pressed"]
[connection signal="pressed" from="AdButton" to="." method="_on_AdButton_pressed"]
[connection signal="pressed" from="KnButton" to="." method="_on_KnButton_pressed"]
[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]
